--- a/packages/styles/components/select.css
+++ b/packages/styles/components/select.css
@@ -194,7 +194,7 @@
 
   /* Listbox styles */
   [data-slot="list-box"] {
-    @apply p-1.5 outline-none;
+    @apply outline-none;
   }
 
   [data-slot="list-box-item"] {
